--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "firebase-studio-react-seed",
-  "private": true,
+  "private": false,
   "version": "1.2.2",
   "type": "module",
   "scripts": {
@@ -26,7 +26,6 @@
     "eslint-plugin-react": "^7.34.1",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "prettier": "^3.6.2",
     "vite": "^5.2.0"
   }
 }
