--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "firebase-studio-react-seed",
   "private": false,
-  "version": "1.4.3",
+  "version": "1.4.4",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "update-schema": "python update_schema.py"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.43.4",
